--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <div id="game">
   <button class="play">Start</button>
+  <input type="color" class="p1Color">
+  <input type="color" class="p2Color">
   <table id="board"></table>
 </div>
 
