--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
 <body>
 
 <div id="game">
-  <button class="play">Start</button>
-  <input type="color" class="p1Color">
-  <input type="color" class="p2Color">
+  <div class="top-wrap">
+    <div class="player">
+      P1: <input type="color" class="p1Color">
+    </div>
+    <div>
+    <button class="play">Start</button>
+    </div>
+    <div class="player">
+      P2: <input type="color" class="p2Color">
+    </div>
+  </div>
   <table id="board"></table>
 </div>
 
